--- a/hotel/index.html
+++ b/hotel/index.html
@@ -20,13 +20,16 @@
     <!-- navbar -->
     <div class="navbar">
       <!-- sidebar -->
+      <input type="checkbox" class="checkbox" id="click" hidden />
       <div class="sidebar">
         <!-- menu icon -->
-        <div class="menu-icon">
-          <div class="line line-1"></div>
-          <div class="line line-2"></div>
-          <div class="line line-3"></div>
-        </div>
+        <label for="click">
+          <div class="menu-icon">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+          </div>
+        </label>
         <!-- social icon -->
         <ul class="social-link-list">
           <li>
@@ -52,7 +55,7 @@
         </ul>
         <!-- end social icon -->
         <div class="year">
-          <p>2018</p>
+          <p>2022</p>
         </div>
       </div>
       <!-- end sidebar -->
@@ -102,6 +105,49 @@
       </nav>
     </div>
     <!-- end navbar -->
+    <!-- start of header -->
+    <header>
+      <div class="brand">
+        <div>
+          <img src="img/crown.png " width="80px;" />
+        </div>
+        <h3 class="hotel-heading">Grand Hotel</h3>
+      </div>
+      <div class="banner">
+        <h1 class="banner-heading">Welcome to Grand Hotel</h1>
+        <p class="banner-paragraph">Make your life luxurious</p>
+        <button class="banner-btn">Check Out</button>
+      </div>
+    </header>
+    <!-- end of headaer -->
+    <!-- About us -->
+    <section class="about-us">
+      <div class="about-us-content">
+        <h1 class="about-us-heading">about us</h1>
+        <div class="">
+          <div class="small-line"></div>
+          <div class="big-line"></div>
+        </div>
+        <h3 class="sub-heading">Grand Hotel</h3>
+        <p class="about-us-paragraph">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus
+          aliquid delectus quasi deserunt odio, quibusdam rerum quis incidunt
+          nemo architecto, consequatur error ipsum veniam dolorum soluta velit
+          dolor beatae. Eum?
+        </p>
+        <button class="about-us-btn">
+          Read more <i class="fas fa-angle-double-right"></i>
+        </button>
+      </div>
+      <div class="about-us-images">
+        <img src="./img/about-us-img-1.jpeg" alt="" class="images image-1" />
+        <img src="./img/about-us-img-2.jpeg" alt="" class="images image-2" />
+        <img src="./img/about-us-img-3.jpeg" alt="" class="images image-3" />
+        <img src="./img/about-us-img-4.jpeg" alt="" class="images image-4" />
+      </div>
+    </section>
+    <!-- end about us -->
+
     <script
       src="https://kit.fontawesome.com/74be825eec.js"
       crossorigin="anonymous"
