--- a/hotel/index.html
+++ b/hotel/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width= , initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shorcut icon" href="img/crown.png" />
     <link
       rel="stylesheet"
@@ -136,17 +136,225 @@
           dolor beatae. Eum?
         </p>
         <button class="about-us-btn">
-          Read more <i class="fas fa-angle-double-right"></i>
+          Read more <i class="fas fa-angle-double-right arrow-right"></i>
         </button>
       </div>
       <div class="about-us-images">
-        <img src="./img/about-us-img-1.jpeg" alt="" class="images image-1" />
-        <img src="./img/about-us-img-2.jpeg" alt="" class="images image-2" />
-        <img src="./img/about-us-img-3.jpeg" alt="" class="images image-3" />
-        <img src="./img/about-us-img-4.jpeg" alt="" class="images image-4" />
+        <img src="./img/about-us-img-1.jpeg" alt="" class="image image-1" />
+        <img src="./img/about-us-img-2.jpeg" alt="" class="image image-2" />
+        <img src="./img/about-us-img-3.jpeg" alt="" class="image image-3" />
+        <img src="./img/about-us-img-4.jpeg" alt="" class="image image-4" />
       </div>
     </section>
     <!-- end about us -->
+    <!-- Rooms in grand hotel -->
+    <section class="room">
+      <div class="common-header">
+        <h1 class="common-heading">Rooms In Grand Hotel</h1>
+        <div class="lines">
+          <div class="small-line"></div>
+          <div class="big-line"></div>
+        </div>
+      </div>
+      <div class="rooms-card-wrapper">
+        <div class="room-card">
+          <img src="img/single-room.jpeg" class="room-img" alt="" srcset="" />
+          <div class="room-card-content">
+            <h4 class="room-card-heading">Single Room</h4>
+            <p class="room-card-paragraph">Lorem ipsum dolor sit amet</p>
+            <p class="room-price">Rs.2000</p>
+            <button class="room-card-btn">
+              book now
+              <i class="fas fa-angle-double-right arrow-right"></i>
+            </button>
+          </div>
+        </div>
+        <div class="room-card">
+          <img src="img/double-room.jpeg" class="room-img" alt="" srcset="" />
+          <div class="room-card-content">
+            <h4 class="room-card-heading">Double Room</h4>
+            <p class="room-card-paragraph">Lorem ipsum dolor sit amet</p>
+            <p class="room-price">Rs.3000</p>
+            <button class="room-card-btn">
+              book now
+              <i class="fas fa-angle-double-right arrow-right"></i>
+            </button>
+          </div>
+        </div>
+
+        <div class="room-card">
+          <img src="img/lux.jpeg" class="room-img" alt="" srcset="" />
+          <div class="room-card-content">
+            <h4 class="room-card-heading">Lux</h4>
+            <p class="room-card-paragraph">Lorem ipsum dolor sit amet</p>
+            <p class="room-price">Rs.3000</p>
+            <button class="room-card-btn">
+              book now
+              <i class="fas fa-angle-double-right arrow-right"></i>
+            </button>
+          </div>
+        </div>
+        <div class="room-card">
+          <img src="img/vip.jpeg" class="room-img" alt="" srcset="" />
+          <div class="room-card-content">
+            <h4 class="room-card-heading">VIP</h4>
+            <p class="room-card-paragraph">Lorem ipsum dolor sit amet</p>
+            <p class="room-price">Rs.5000</p>
+            <button class="room-card-btn">
+              book now
+              <i class="fas fa-angle-double-right arrow-right"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="room-btn-wrapper">
+        <button class="room-btn">check all rooms</button>
+      </div>
+    </section>
+    <section class="customer">
+      <h1 class="customer-heading">our customers</h1>
+      <div class="lines">
+        <div class="small-line"></div>
+        <div class="big-line"></div>
+      </div>
+      <p class="customer-paragraph">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro, ratione
+        sint facere illum eaque fugit quisquam est maiores suscipit laborum quo,
+        ipsam libero, animi assumenda eum doloremque ipsum distinctio?
+        Voluptatum!
+      </p>
+      <div class="author-review">
+        <div class="author author-1">
+          <div class="author-image-wrapper">
+            <img src="img/customer-1.jpeg" class="author-img" alt="" />
+          </div>
+          <div class="author-content">
+            <h4 class="author-name">Helen Doe</h4>
+            <p class="author-mood">Happy Customer</p>
+            <p class="author-paragraph">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
+              dicta, ab voluptates debitis corporis saepe autem quod aperiam
+              illum quas. Minima quasi nobis assumenda adipisci? Sint possimus
+              tempora et vitae.
+            </p>
+          </div>
+        </div>
+        <div class="author author-2">
+          <div class="author-image-wrapper">
+            <img src="img/customer-2.jpeg" class="author-img" alt="" />
+          </div>
+          <div class="author-content">
+            <h4 class="author-name">Monica Smith</h4>
+            <p class="author-mood">Happy Customer</p>
+            <p class="author-paragraph">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
+              dicta, ab voluptates debitis corporis saepe autem quod aperiam
+              illum quas. Minima quasi nobis assumenda adipisci? Sint possimus
+              tempora et vitae.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end of rooms -->
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="main-part">
+        <div class="main-address">
+          <h2 class="footer-heading">Grand Hotel</h2>
+          <div class="sub-main-address">
+            <p>
+              <a href="#"> <p>support@grandhotel.com</p></a>
+            </p>
+            <p><a href="#">Sonarpur Station Road</a></p>
+            <p><a href="#">Tel: +123 456 789</a></p>
+          </div>
+        </div>
+        <div class="explore">
+          <h2 class="footer-heading">Explore</h2>
+          <div class="sub-explore">
+            <p><a href="#">Home</a></p>
+            <p><a href="#">About Us</a></p>
+            <p><a href="#">Rooms</a></p>
+            <p><a href="#">Events</a></p>
+            <p><a href="#">Customers</a></p>
+            <p><a href="#">Contact</a></p>
+          </div>
+        </div>
+        <div class="contact">
+          <h2 class="footer-heading">Contact</h2>
+          <p class="p-form">Sign Up for News</p>
+          <form class="form-email">
+            <input
+              class="input"
+              type="text"
+              name="email"
+              placeholder="Your email..."
+            />
+            <button class="form-btn">Sign Up</button>
+          </form>
+        </div>
+        <div class="gallery">
+          <h2 class="footer-heading">Gallery</h2>
+          <div class="gallery-images">
+            <div class="image-wrapper">
+              <img
+                class="footer-img"
+                class="footer-image"
+                src="img/gallery-img-1.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="image-wrapper">
+              <img
+                class="footer-img"
+                class="footer-image"
+                src="img/gallery-img-2.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="image-wrapper">
+              <img
+                class="footer-img"
+                class="footer-image"
+                src="img/gallery-img-3.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="image-wrapper">
+              <img
+                class="footer-img"
+                class="footer-image"
+                src="img/gallery-img-4.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="image-wrapper">
+              <img
+                class="footer-img"
+                class="footer-image"
+                src="img/gallery-img-5.jpeg"
+                alt=""
+              />
+            </div>
+            <div class="image-wrapper">
+              <img
+                class="footer-img"
+                class="footer-image"
+                src="img/gallery-img-6.jpeg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="creator-part">
+        <div class="copyright-text">
+          <p>Copyright &copy; 2022. Grand Hotel. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
+    <!-- End of footer -->
 
     <script
       src="https://kit.fontawesome.com/74be825eec.js"
